# asp-ArchivesSpaceCLI

./: LICENSE.txt  README.md  containers.py  csvbash.sh  example_notes.json  main.py  pyproject.toml  resources.py
src/ascli/: config.py  containers.py  main.py  resources.py
src/asp/: config.py  containers.py  main.py  oldmain.py  resources.py
