[project]
name = "ascli"
version = "0.1.0"
description = "Command line tool for the ArchivesSpace API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "archivessnake>=0.10.1",
    "click>=8.2.1",
]

[project.scripts]
ascli = "ascli.main:main"
ascli-containers = "ascli.containers:main"
ascli-resources = "ascli.resources:main"

[tool.uv]
package = true
