[project]
name = "ascli"
version = "0.1.0"
description = "Command line tool for the ArchivesSpace API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "archivessnake>=0.10.1",
    "cyclopts==4.5.0",
    "platformdirs>=4.5.1",
]

[project.scripts]
ascli = "ascli.main:main"

[tool.uv]
package = true
