[project]
name = "asp"
version = "0.1.0"
description = "A command line tool for the ArchivesSpace API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "archivessnake>=0.10.1",
    "cyclopts==4.5.0",
    "platformdirs>=4.5.1",
]

[project.scripts]
asp = "asp.main:main"

[tool.uv]
package = true
